# pdf-app

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/routers/: llm.py  pdf.py  pdf_chat.py
dev/: batch_pdfchat.py  chat-w-pdf.ipynb  env.yaml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/lib/components/: PdfViewer.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  Header.svelte  styles.css
frontend/src/routes/batch/: +page.svelte
frontend/src/routes/single/: +page.svelte
